--- a/hello.html
+++ b/hello.html
@@ -16,6 +16,10 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
+
+		<div>
+			<p> Je m'appelle Aurélie et je suis une machine. </p>
+		</div>
 		
 	</body>
 </html>
