--- a/hello.html
+++ b/hello.html
@@ -17,9 +17,17 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 
+		<!--description -->
 		<div>
+			<h1> Ma description </h1>
 			<p> Je m'appelle Aurélie et je suis une machine. </p>
 		</div>
+
+		<!--récompense -->
+		<div>
+				<h1> Mes récompenses </h1>
+				<p> en construction ... </p>
+			</div>
 		
 	</body>
 </html>
