--- a/hello.html
+++ b/hello.html
@@ -28,6 +28,12 @@
 				<h1> Mes récompenses </h1>
 				<p> <img src="images\medal_bronze.png"> <img src="images\medal_silver.png"> </p>
 			</div>
+
+			<!--commandes git -->
+		<div>
+			<h1> Mes commandes git </h1>
+			<p> git pull </p>
+		</div>
 		
 	</body>
 </html>
